feat: add weather rain rout and log insertion route
